# fin

./: CONTACT.md  INSTALL.md  LICENSE  Makefile  PKGBUILD  README.md  UPDATES.md  fin.spec  install.sh  pyproject.toml  run_fin.py
fin/: __init__.py  __main__.py  cli.py  config.py  constants.py  exceptions.py  libsven.py  preflight.py  ssl_bundle.py  transaction.py
fin/builder/: __init__.py  aur_cache.py  makepkg.py  pkgbuild.py
fin/commands/: __init__.py  adopt_installed.py  check_version.py  clean.py  deps.py  doctor.py  find_command.py  info.py  install.py  list_cmd.py  mirror.py  orphans.py  path_cmd.py  remove.py  rollback.py  search.py  self_remove.py  self_update.py  snapshots.py  sync.py  update.py  upgrade.py  verify.py  version.py
fin/core/: updater.py
fin/db/: __init__.py  aur_db.py  db_version.py  local_db.py  models.py  sync_db.py
fin/downloader/: __init__.py  checksum.py  fetcher.py  gpg.py  mirror.py  pkgbuild_fetcher.py
fin/installer/: __init__.py  alpm_hooks.py  extractor.py  hooks.py  lib_checker.py  rollback.py
fin/migration/: __init__.py
fin/resolver/: __init__.py  compat.py  conflict.py  graph.py  (+4 more)
initscripts/: bluetooth  dbus  lightdm  networkmanager  pulseaudio  sddm
libfin/: hooks.c  vercmp.c
sandbox/: test_sandbox.py
scripts/: adopt_blfs.py  adopt_lfs.py  bootstrap.sh  install.sh  release.sh
tests/: conftest.py  test_aur_db.py  test_builder.py  test_cli.py  test_downloader.py  test_hardening.py  test_installer.py  test_local_db.py  test_models.py  test_resolver.py  test_security.py  test_sync_db.py  test_transaction.py
(+13 files in other folders)
